# DockOps

./: .env.example  .gitignore  docker-compose.yml
dockops-backend/: Dockerfile  pom.xml
dockops-backend/src/main/java/com/dockops/: DockOpsApplication.java
dockops-backend/src/main/java/com/dockops/ai/: EvalForgeNotifier.java  GeminiService.java
dockops-backend/src/main/java/com/dockops/config/: JpaAuditingConfig.java  SecurityConfig.java  TerminalWebSocketConfig.java  WebSocketConfig.java
dockops-backend/src/main/resources/: application.yml
dockops-cli/: README.md  pyproject.toml  requirements.txt
dockops-cli/dockops_cli/: cli.py  client.py  config.py  fmt.py
dockops-frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
dockops-frontend/src/: App.tsx  index.css
dockops-frontend/src/components/layout/: AppLayout.tsx  ProtectedRoute.tsx  Sidebar.tsx
dockops-frontend/src/components/nodes/: AddNodeModal.tsx
dockops-frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
dockops-frontend/src/context/: AuthContext.tsx
dockops-frontend/src/hooks/: useWebSocket.ts
dockops-frontend/src/lib/: utils.ts
dockops-frontend/src/pages/: AppRegistryPage.tsx  ContainersPage.tsx  DeploymentsPage.tsx  FileBrowserPage.tsx  ImagesPage.tsx  LoginPage.tsx  MetricsPage.tsx  NetworksPage.tsx  NodesPage.tsx  OverviewPage.tsx  ProjectsPage.tsx  TerminalPage.tsx  VolumesPage.tsx
dockops-frontend/src/services/: api.ts
dockops-frontend/src/types/: index.ts
nginx/: nginx.conf
scripts/: deploy-vps.sh  init-admin.sh
(+64 files in other folders)
